@@ -5,3 +5,5 @@ v1.0	initial
 v1.1	NEW usb flash drive read/write
 		FIX bug in command history in live mode
 		FIX EXP OP now exists
+		NEW ABS OP absolute value, single argument
+		
